#!/usr/bin/perl -w
#
# "News"
#
# Note that this is currently mostly a copy of Rex with a few default
# values changed. Should this grabber & Rex require modification, it'd
# be worth merging the common code into a library or something.

my $version  = '1.7';

use strict;

use Getopt::Long;
use Date::Manip;
use File::Path;
use File::Basename;
use Data::Dumper;
use HTML::TreeBuilder;
use JavaScript;
use POSIX;
use Encode;

use XMLTV;
use XMLTV::Ask;

use Shepherd::Common;

# ---------------------------------------------------------------------------
# --- Global Variables

my $progname = "News";
my $lang = "en";

my $DATASOURCE             = "http://guides.news.com.au";
my $DATASOURCE_SETUP       = "$DATASOURCE/television/profile/?action=saveProfile";
my $DATASOURCE_GUIDE       = "$DATASOURCE/television/guide/";
my $DATASOURCE_GUIDE_TODAY = "$DATASOURCE/television/guide/?action=restofday";
my $DATASOURCE_DETAIL      = "$DATASOURCE/television/guide/";

my $runtime = time();
my $laststats = $runtime;
my $firstfetch;
my $debug = 0;
my $opt = { };
my $channels;
my $opt_channels;
my $gaps;
my %chanid;
my $cached;
my $lastpids;
my $precache;
my $ua;
my $jsc;
my %shows;
my $numshows;
my %stats;
my $dcount;

# ---------------------------------------------------------------------------
# --- Setup

print "$progname $version\n";

$| = 1;

Getopt::Long::Configure(qw/pass_through/);

get_command_line_options();

print "Ignoring --config-file option.\n" if ($opt->{'config-file'});

exit 0 if ($opt->{version});

help() if ($opt->{help});

set_defaults();
read_channels_file();
unless ($channels)
{
    print "ERROR: No channels requested. Please use --channels_file.\n";
    exit 2;
}

read_gaps_file();

if ($opt->{test})
{
  print "Test mode: won't write XML or cache.\n";
  $opt->{output} = undef;
}
	
build_channel_map();

if ($opt->{'show-channels'})
{
  show_channels();
  exit 0;
}

if ($debug or $opt->{'show-config'})
{
  show_config();
  exit 0 if ($opt->{'show-config'});
}
