@@ -1,8 +1,8 @@
-#!/usr/bin/perl -w
+#!/usr/bin/env perl
 #
 # "Rex"
 
-my $version  = '9.0.0'; 
+my $version  = '9.1.0'; 
 
 # TODO: remove refresh_ua every 20 requests (maybe)
 
@@ -19,6 +19,7 @@ my $version  = '9.0.0';
 # http://www.whuffy.com/tv_grab_au/
 
 use strict;
+use warnings;
 use Getopt::Long;
 use Date::Manip;
 use File::Path;
