@@ -1,20 +1,20 @@
-application     shepherd            1.5.3
+application     shepherd            1.6.0
 reference       channel_list        87
-reference       Shepherd/Common.pm  0.38
-reference       Shepherd/MythTV.pm  0.9
-reference       Shepherd/Configure.pm   0.25
+reference       Shepherd/Common.pm  0.39
+reference       Shepherd/MythTV.pm  0.10
+reference       Shepherd/Configure.pm   0.26
 reference	Shepherd/json_pp.pm 0.2
-grabber         news                1.7
-grabber         oztivo              2.47
-grabber         yahoo7widget        2.26
-grabber         abc_website         4.10
-grabber         rex                 9.0.0
-grabber         foxtel_swf          2.03
-grabber         acctv_website       0.08-r1
-grabber         sbsweb              4.03
-grabber         zaxmltv             0.02
-reconciler      reconciler_mk2      0.44
-postprocessor   imdb_augment_data   1.00
-postprocessor   flag_aus_hdtv       0.50
-postprocessor   augment_timezone    0.21
+grabber         news                1.8
+grabber         oztivo              2.48
+grabber         yahoo7widget        2.27
+grabber         abc_website         4.11
+grabber         rex                 9.1.0
+grabber         foxtel_swf          2.04
+grabber         acctv_website       0.09
+grabber         sbsweb              4.04
+grabber         zaxmltv             0.03
+reconciler      reconciler_mk2      0.45
+postprocessor   imdb_augment_data   1.01
+postprocessor   flag_aus_hdtv       0.51
+postprocessor   augment_timezone    0.22
 END
